# chatroom

./: .env  .env.example  CR-Script.js  CR-Style.css  CR.html  CR_PWD_API.js  CR_server.js  Cargo.toml  EmojisMap.json  README.md  flake.nix  index.html  module.nix  script.js  style.css
src/: main.rs  server.rs
