[package]
name = "chatroom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.1"
dotenv = "0.15.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
mysql = "26.0.1"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
